[gd_scene load_steps=50 format=1]

[ext_resource path="res://game/scripts/intro.gd" type="Script" id=1]
[ext_resource path="res://assets/slides/001.png" type="Texture" id=2]
[ext_resource path="res://assets/slides/005.png" type="Texture" id=3]
[ext_resource path="res://assets/slides/006.png" type="Texture" id=4]
[ext_resource path="res://assets/slides/007.png" type="Texture" id=5]
[ext_resource path="res://assets/slides/008.png" type="Texture" id=6]
[ext_resource path="res://assets/slides/009.png" type="Texture" id=7]
[ext_resource path="res://assets/slides/010.png" type="Texture" id=8]
[ext_resource path="res://assets/slides/011.png" type="Texture" id=9]
[ext_resource path="res://assets/slides/012.png" type="Texture" id=10]
[ext_resource path="res://assets/slides/013.png" type="Texture" id=11]
[ext_resource path="res://assets/slides/014.png" type="Texture" id=12]
[ext_resource path="res://assets/slides/016.png" type="Texture" id=13]
[ext_resource path="res://assets/slides/017.png" type="Texture" id=14]
[ext_resource path="res://assets/slides/018.png" type="Texture" id=15]
[ext_resource path="res://assets/slides/019.png" type="Texture" id=16]
[ext_resource path="res://assets/slides/020.png" type="Texture" id=17]
[ext_resource path="res://assets/slides/021.png" type="Texture" id=18]
[ext_resource path="res://assets/slides/022.png" type="Texture" id=19]
[ext_resource path="res://assets/slides/023.png" type="Texture" id=20]
[ext_resource path="res://assets/slides/024.png" type="Texture" id=21]
[ext_resource path="res://assets/slides/025.png" type="Texture" id=22]
[ext_resource path="res://assets/slides/026.png" type="Texture" id=23]
[ext_resource path="res://assets/slides/027.png" type="Texture" id=24]
[ext_resource path="res://assets/slides/028.png" type="Texture" id=25]
[ext_resource path="res://assets/slides/029.png" type="Texture" id=26]
[ext_resource path="res://assets/slides/030.png" type="Texture" id=27]
[ext_resource path="res://assets/slides/031.png" type="Texture" id=28]
[ext_resource path="res://assets/slides/032.png" type="Texture" id=29]
[ext_resource path="res://assets/slides/033.png" type="Texture" id=30]
[ext_resource path="res://assets/slides/034.png" type="Texture" id=31]
[ext_resource path="res://assets/slides/035.png" type="Texture" id=32]
[ext_resource path="res://assets/slides/036.png" type="Texture" id=33]
[ext_resource path="res://assets/slides/037.png" type="Texture" id=34]
[ext_resource path="res://assets/slides/038.png" type="Texture" id=35]
[ext_resource path="res://assets/slides/039.png" type="Texture" id=36]
[ext_resource path="res://assets/slides/040.png" type="Texture" id=37]
[ext_resource path="res://assets/slides/041.png" type="Texture" id=38]
[ext_resource path="res://assets/slides/042.png" type="Texture" id=39]
[ext_resource path="res://assets/slides/043.png" type="Texture" id=40]
[ext_resource path="res://assets/slides/044.png" type="Texture" id=41]
[ext_resource path="res://assets/slides/045.png" type="Texture" id=42]
[ext_resource path="res://assets/slides/046.png" type="Texture" id=43]
[ext_resource path="res://assets/slides/047.png" type="Texture" id=44]
[ext_resource path="res://assets/slides/048.png" type="Texture" id=45]
[ext_resource path="res://assets/slides/049.png" type="Texture" id=46]
[ext_resource path="res://assets/sprites/skip.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/arrow.png" type="Texture" id=48]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "intro_control",
"speed": 3.0
} ]

[node name="intro" type="Node2D"]

script/script = ExtResource( 1 )

[node name="slide_show" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 368, 208 )
transform/scale = Vector2( 0.38, 0.38 )
frames = SubResource( 1 )
animation = "intro_control"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 600, 376 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 47 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "reset"
visibility_mode = 0

[node name="Button" type="Button" parent="."]

visibility/opacity = 0.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 584.0
margin/top = 368.0
margin/right = 660.0
margin/bottom = 390.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 47 )
flat = false

[node name="arrow" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 656, 280 )
transform/scale = Vector2( 4, 4 )
normal = ExtResource( 48 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 0

[node name="next" type="Button" parent="."]

visibility/opacity = 0.0
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 624.0
margin/top = 264.0
margin/right = 652.0
margin/bottom = 286.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 48 )
flat = false

[node name="slide_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="finished" from="slide_show" to="." method="_on_slide_show_finished"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="arrow" to="." method="_on_arrow_pressed"]

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]


